- 2.4.33
    - entity interact bypass tag
    - strict interact config
    - allow attribute page to be opened for dog golem

- 2.4.32
    - Fix create fuel feeding
    - Allow golems to use fuels from dimensional backpack on them or their captain

- 2.4.31
    - Damage cap modifier fix
    - Change create material stats, add new modifiers
    - Create material recipe using sequenced assembly only
    - Create generic material recipe switched from heated mixing to sequenced assembly
    - Allow deployer to put equipments and curios onto golems

- 2.4.30
    - Fix Patchouli Book for cataclysm
    - Add patrol patchouli entries

- 2.4.29
    - Add patrol mode
    - Fix humanoid golem player skin renderer not rendering outer layer
    - Mobs killed by golem with pickup upgrade will have drops spawned at the golem position
    - Add Leviathan, Ender Guardian, Netherite Monstrosity, and Ancient Remnant upgrade
    - Add Damage Cap modifier to Cataclysm materials
    - Ignis attack modifier can apply blazing brand up to 5 layers only
    - Fix selection conflict with backpack

- 2.4.28
    - Add Cataclysm compat
    - Make cyclic damage detection default off
    - Fix player immune upgrade to be only immune to owner and applies

- 2.4.27
    - Fix humanoid golems use player skin by default

- 2.4.26
    - Add player skin support for golems
    - Add config option to not make hostile mobs automatically hostile to golems
    - Touhou Little Maid compat: command wand can edit their curio

- 2.4.25
    - Fix enchantment damage bonus not working on Large Golem Weapons
    - Fix large golem weapon cannot be enchanted in enchanting table
    - Fix compatibility with newest L2Library attribute tab

- 2.4.24
    - Fix the bug that golem with corrupted data cannot be placed
    - Prevent future golem data corruption

- 2.4.23
    - Fix command wand attack config
    - Add upgrade slot config
    - Fix damage calculation
    - Greatly improved golem swimming speed with Swim upgrade